fixed overflow x bug

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -23,6 +23,7 @@ body {
     -moz-osx-font-smoothing: grayscale;
     text-rendering: optimizeLegibility;
     -webkit-tap-highlight-color: transparent;
+    overflow-x: hidden;
 }
 
 @import './layout';
